// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    <Component />
     expense 
    totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render Expense summary with various expenses 1`] = `
<div>
  <h1>
    Viewing 
    <Component />
    <Component />
    <Component />
     expense 
    totalling 
    $12.00
  </h1>
</div>
`;
